fix footer base overlap

--- a/style.css
+++ b/style.css
@@ -294,7 +294,7 @@ aside figure figcaption {
   right: 0;
   border-top: 1px solid gray;
   min-width: 100%;
-  height: 7%;
+  height: 4%;
   background-color: white;
   display: inline-block;
   align-items: center;
